src/snapshots/week_calendar__week_with_calendar_number__testing__new_within_months.snap
---
source: src/week_with_calendar_number.rs
expression: actual
---
[
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            22,
        ),
        monday: 2023-05-29,
        sunday: 2023-06-04,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            23,
        ),
        monday: 2023-06-05,
        sunday: 2023-06-11,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            24,
        ),
        monday: 2023-06-12,
        sunday: 2023-06-18,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            25,
        ),
        monday: 2023-06-19,
        sunday: 2023-06-25,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            26,
        ),
        monday: 2023-06-26,
        sunday: 2023-07-02,
    },
]
