src/snapshots/week_calendar__week_with_calendar_number__testing__new_within_months_at_end_of_year_2022.snap
---
source: src/week_with_calendar_number.rs
expression: actual
---
[
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            48,
        ),
        monday: 2022-11-28,
        sunday: 2022-12-04,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            49,
        ),
        monday: 2022-12-05,
        sunday: 2022-12-11,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            50,
        ),
        monday: 2022-12-12,
        sunday: 2022-12-18,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            51,
        ),
        monday: 2022-12-19,
        sunday: 2022-12-25,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            52,
        ),
        monday: 2022-12-26,
        sunday: 2023-01-01,
    },
]
