src/snapshots/week_calendar__week_with_calendar_number__testing__new_within_months_at_end_of_year_2023.snap
---
source: src/week_with_calendar_number.rs
expression: actual
---
[
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            48,
        ),
        monday: 2023-11-27,
        sunday: 2023-12-03,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            49,
        ),
        monday: 2023-12-04,
        sunday: 2023-12-10,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            50,
        ),
        monday: 2023-12-11,
        sunday: 2023-12-17,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            51,
        ),
        monday: 2023-12-18,
        sunday: 2023-12-24,
    },
    WeekCalendar {
        week_number: ValidatedWeekNumber(
            52,
        ),
        monday: 2023-12-25,
        sunday: 2023-12-31,
    },
]
